force-app/main/default/objects/Giving_Level__c/Giving_Level__c.object-meta.xml
<CustomObject>
    <description>Admin-configurable giving-level definition (e.g. Congressional, Senate). Each record sets a name, an inclusive Minimum and exclusive Maximum yearly-giving amount, a sort rank, an active flag, and an optional Engagement Plan Template to launch when a donor reaches the level. Drives the Annual Giving Summary level engine. JSI-90 Moves Management. Author: Jason Ott.</description>
    <label>Giving Level</label>
    <nameField>
        <label>Giving Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Giving Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>