force-app/main/default/objects/Giving_Level__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When TRUE this level participates in level assignment. Deactivate to retire a level without deleting it (and its history). JSI-90 / Jason Ott.</description>
    <inlineHelpText>Uncheck to retire this level without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>