force-app/main/default/objects/Giving_Level__c/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <description>Inclusive lower bound (greater-than-or-equal, &gt;=) of this level's yearly-giving range. Leave blank for the catch-all bottom tier. JSI-90 / Jason Ott.</description>
    <inlineHelpText>Lowest yearly giving that qualifies for this level (inclusive). Blank = no lower bound.</inlineHelpText>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>