force-app/main/default/objects/Giving_Level__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Rank of this level from lowest (1) to highest. Used to compare levels for inheritance (higher rank wins). JSI-90 / Jason Ott.</description>
    <inlineHelpText>Rank from lowest tier (1) to highest. Must be unique and increase with the giving amount.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>